CHANGELOG

2.0.52
UTILS:

BUGFIX:

GENERAL:


2.0.51 (20220731)
UTILS:
* UTIL different classes - improvement for usage output
* type=stats | introduce argument exportcsv=json.csv - to get stats exported in CSV
* type=diff | final improvement for stdout of diff

BUGFIX:
* class ObjectwithDescription | method description_merge() - do not merge description if other description is empty`
* type=address-/service-/tag-merger | bugfix if object creation, to update objects in memory for merging part

GENERAL:


2.0.50 (20220729)
UTILS:
* type=dhcp - introduction
* development ike.php - extension for GreTunnel
* type=rule-merger | improved exportcsv to also display the original rule which is getting manipulate
* type=address-merger | improvements for dupalgorithm=identical - do not create new objects

BUGFIX:
* type=diff | bugfix if argument filter is used with $$name$$
* type=diff filter=jsonfile.json | bugfix if no include filter is set but exclude must be triggered
* type=[object]-merger | bugfix to use location=DG1,DG2
* typ=address-merger dupalgorthm=identical | bugfix to NOT merge not identical objects but same value from childDG #584
* type=address-merger | fix pickfilter if allowmergingwithupperlevel is used

GENERAL:
* bash autocompletion - extension for actions= filter=
* introduce class DHCP / GreTunnel and all respective additions for UTILS
* different classes | extend validation for usage of json_decode
* update dynamic content version to 8597-7479


2.0.49 (20220726)
UTILS:
* pan-os-php type=diff | introduce for argument filter=JSONFILE.json
* type=diff | introduce of filtering on xpath with name1 and name2 arguments as variable
* type=diff | extend usage help for all possible arguments

BUGFIX:
* class UTIL | bugfix if no timezone setting can be found

GENERAL:
* update util_action_filter.json file


2.0.48 (20220720)
UTILS:
* UTIL type=securityprofile securityprofiletype=url-filtering | improvements actions=url-filtering-action-set:[ACTION],[category]