@@ -1,9 +1,8 @@
 ARG IMAGE=ubuntu:22.04
+FROM ${IMAGE}
+
 ARG php_var="8.1"
 ARG user_var="root"
-
-
-FROM ${IMAGE}
 
 SHELL ["/bin/bash", "-c"]
 
@@ -43,7 +42,7 @@ RUN chmod -R 777 /tools/pan-os-php
 RUN cat /tools/pan-os-php/utils/alias.sh >> /$user_var/.bashrc
 RUN cat /tools/pan-os-php/utils/bash_autocompletion/enable_bash.txt >> /$user_var/.bashrc
 
-#COPY utils/bash_autocompletion/pan-os-php.sh /usr/share/bash-completion/completions/pan-os-php
+
 RUN ln -s /tools/pan-os-php/utils/bash_autocompletion/pan-os-php.sh /usr/share/bash-completion/completions/pan-os-php
 
 RUN git config --global user.email=test@test.com user.name=test
