@@ -15,8 +15,9 @@ echo "START \"install PAN-OS-PHP on UBUNTU\"" \
 && echo "" \
 && apt install -y git php${PHP_VAR} vim php${PHP_VAR}-curl php${PHP_VAR}-dom php${PHP_VAR}-mbstring php${PHP_VAR}-bcmath \
 && echo "" \
-&& apt install -y python3 python3-pandas python3-xlsxwriter \
+&& apt install -y python3 python3-pandas python3-xlsxwriter python3-requests \
 && echo "" \
+&& apt install -y jq \
 && echo "" \
 && php -v \
 && mkdir -p /tools ; cd /tools \
